<resources>
    <string name="app_name">Movies</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster_image">Poster Image</string>
    <string name="popular">Popular</string>
    <string name="view_all">ViewAll</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_account">My Account</string>
    <string name="dummy_movie_name">Spider Man</string>
    <string name="runtime">Runtime</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="media">Media</string>
    <string name="action_retry">Retry</string>

    <string name="generic_error">Something went wrong.</string>
    <string name="database_error">Couldn\'t load values from database</string>
    <string name="connection_error">Please check your internet connection</string>
    <string name="server_error">A server error occurred, please try again later</string>
</resources>